Quick fix: Too wide carousel

--- a/css/main.css
+++ b/css/main.css
@@ -42,11 +42,11 @@ article {
 #carousel {
 	display: inline-block;
 	overflow: hidden;
-	width: 100vw;
+	width: 100%;
 }
 
 .carousel-item > img {
-	width: 100vw;
+	width: 100%;
 	object-fit: cover;
 }
 
